Added loc and event_time, related changes

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="layout-content-header">
+    <h1 class="page-hero-text">New user sign-up</h1>
+</div>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
