--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -17,10 +17,12 @@
 
 EVENT TITLE <br>
 <input type = "text" name="title"/><br> 
-EVENT DATE <br>
-<input type = "text" name="date" placeholder="yyyy-mm-dd"/><br>
 EVENT URL <br>
 <input type = "text" name="refer"/><br>
+EVENT DATE <br>
+<input type = "text" name="date" placeholder="yyyy-mm-dd"/><br>
+EVENT LOCATION <br>
+<input type = "text" name="loc"/><br>
 EVENT DETAIL <br>
 <textarea type = "text" name="body"></textarea><br>
 TAGS / CATEGORIES <br>
