Added user image upload

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -26,6 +26,8 @@
     <input type="checkbox" name="preferences" value="greek life" />Greek Life
     <input type="checkbox" name="preferences" value="clubs" />Clubs
     </tr>
+    <br>
+    <input type="file" name="picture"/>
     </table>
     <input type="submit" value="Register"/>
 </form>
