--- a/media/static/style.css
+++ b/media/static/style.css
@@ -194,7 +194,7 @@ body, input, textarea {
   font-weight: 300;
 }
 a {
-  color: #ce5333;
+  color: #508373;
   text-decoration: none;
 }
 a:hover {
@@ -274,6 +274,7 @@ a:hover {
 .layout-sidebar-wrap {
   float: left;
   position: relative;
+  text-align: center;
   width: 185px;
 }
 /* Footer content */
@@ -350,17 +351,17 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
   max-width: 1238px; /* 1+1238+1 = 1240 */
 }
 .external-nav{
-  /*background-color: teal;*/
-  float: right;
+  float: left;
   line-height: 46px;
-  border-right: 1px solid #d0d0d0;
+  border-left: 1px solid #f0f0f0;
+  border-right: 1px solid #f0f0f0;
 }
 .external-item {
-  font-size: 14px;
   font-weight: 900;
   display: inline-block;
   list-style: none;
   padding: 0 5px;
+  text-transform: uppercase;
 }
 .external-item:last-child {
   padding-right: 20px;
@@ -371,6 +372,18 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
 
 
 /* USF EVENT BEGIN */
+
+.sidebar-divider {
+  border-top: 1px dotted #508373;
+  border-bottom: 1px dotted #508373;
+  margin: 15px;
+  
+}
+.layout-sidebar-wrap a {
+  font-weight: bold;
+  margin: 10px 0;
+  text-transform: uppercase;
+}
 .page-hero-text {
   font-size: 39px;
   font-weight: 900;
