--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -15,7 +15,7 @@
 </ul>
 {% endif %}
 
-<form action="" method="post">{% csrf_token %}
+<form action="" enctype="multipart/form-data" method="post">{% csrf_token %}
     <table border="0" cellpadding="0" >
     {{form.as_table}}  
     <tr><th><label for="id_location">Location:</label></th><td><input id="id_location" maxlength="30" type="text" name="location" size="20" /></td></tr>
