--- a/templates/accounts/welcome.html
+++ b/templates/accounts/welcome.html
@@ -16,24 +16,51 @@
         <h3>My Interest is {{up.interest}}</h3>
         <h3>My Location is {{up.location}}</h3>
         <h3>My Preference is {{preferences}}</h3>
-        <h3>My Event Preferenced is{{eventPreferenced}}:</h3>
-        
-        
-        <div class="main-item-block main-item-style post-item">
-        {% for event in eventPreferenced %}
-            <p>Event Title: {{event.title}}</p>
-            <p>Event Body: {{event.body}}</p>
-        {% endfor %}
-        </div>
-        
-        <div class="main-item-block main-item-style post-item">
-        {% for like in likes %}
-            <p>This user liked: {{ like.event }}</p>
-        {% endfor %}
-        </div>
-        
+
     </div>
+        
 </div>
+
+    <div class="main-item-block main-item-style post-item">
+    <h3>Message Sent List: </h3>
+
+    {% for msg in msg_sent_list %}
+    <strong>From:</strong> {{msg.msg_from.django_user}}<br>
+    <strong>To:</strong>{{msg.msg_to.django_user}}<br>
+    <strong>Content:</strong>{{msg.content}}<br>
+    <strong>Date:</strong>{{msg.time}}<br>
+    {% endfor %}
+    </div>
+
+
+    <div class="main-item-block main-item-style post-item">
+    <h3>Message Received List: </h3>
+
+    {% for msg in msg_received_list %}
+    <strong>From:</strong> {{msg.msg_from.django_user}}<br>
+    <strong>To:</strong>{{msg.msg_to.django_user}}<br>
+    <strong>Content:</strong>{{msg.content}}<br>
+    <strong>Date:</strong>{{msg.time}}<br>
+    {% endfor %}
+    </div>
+        
+        
+        
+    <div class="main-item-block main-item-style post-item">
+    <h3>My Event Preferenced is{{eventPreferenced}}:</h3>
+    <br>
+    {% for event in eventPreferenced %}
+        <p>Event Title: {{event.title}}</p>
+        <p>Event Body: {{event.body}}</p>
+    {% endfor %}
+    </div>
+    
+    <div class="main-item-block main-item-style post-item">
+    {% for like in likes %}
+        <p>This user liked: {{ like.event }}</p>
+    {% endfor %}
+    </div>
+        
 
     
 
