Fixed tag display in archive and single event page

--- a/templates/event/event_listview.html
+++ b/templates/event/event_listview.html
@@ -20,6 +20,11 @@
     <div class="event-meta">
         {{ event.created }}
     </div>
+    Tags: 
+    {% for tag in event.tags.all %}
+    <a href="{% url tag tag %}">{{tag}}</a>
+    {% if not forloop.last %}, {% endif %}
+    {% endfor %}
 {% endif %}
 
 {% endfor %}
