--- a/media/static/style.css
+++ b/media/static/style.css
@@ -274,7 +274,6 @@ a:hover {
 .layout-sidebar-wrap {
   float: left;
   position: relative;
-  text-align: center;
   width: 160px;
 }
 /* Footer content */
@@ -376,11 +375,12 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
 .sidebar-divider {
   border-top: 1px dotted #508373;
   border-bottom: 1px dotted #508373;
-  margin: 15px;
+  margin: 10px;
+  text-align: center;
 }
-.layout-sidebar-wrap a {
+.layout-sidebar-wrap h4 {
   font-weight: bold;
-  margin: 10px 0;
+  margin: 10px;
   text-transform: uppercase;
 }
 .page-hero-text {
