--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -54,7 +54,6 @@
     <br>
     {% for event in eventPreferenced %}
         <p>Event Title: {{event.title}}</p>
-        <p>Event Body: {{event.body}}</p>
     {% endfor %}
     </div>
     
@@ -66,7 +65,7 @@
         
 
     <div class="main-item-block main-item-style post-item">
-    <h3>Friends List: </h3>
+    <h3>You have {{friends_events|length}} friends.</h3>
 	{% for friend in friends %}
         <p>{{ friend.friend_to.django_user }}</p>
      {% endfor %}
@@ -74,7 +73,6 @@
 
     <div class="main-item-block main-item-style post-item">
 
-    {{friends_events|length}}
     <h3>Friends Events List: </h3>
 	{% for event in friends_events %}
         <h2><a href="{% url single event.id %}">{{ event.title }}</a></h2>
