Fixing profile friending, added details

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -65,10 +65,10 @@
         
 
     <div class="main-item-block main-item-style post-item">
-    <h3>You have {{friends_events|length}} friends.</h3>
-	{% for friend in friends %}
-        <p>{{ friend.friend_to.django_user }}</p>
-     {% endfor %}
+    <h3>You have {{friends|length}} friends.</h3>
+	{% for f in friends %}
+        <p>{{ f.friend_to.django_user }}</p>
+    {% endfor %}
     </div>
 
     <div class="main-item-block main-item-style post-item">
