--- a/media/static/style.css
+++ b/media/static/style.css
@@ -214,7 +214,7 @@ a:hover {
 
 -------------------------------------------------------------- */
 
-/* Whole-site content (defined in header.php / footer.php) */
+/* Whole-site content */
 /* USF EVENT BEGIN */
 .layout-page-wrap {
 }
@@ -253,7 +253,9 @@ a:hover {
   width: 1080px;
   position: relative;
 }
-
+.layout-content-wrap {
+  margin: 0 20px;
+}
 .layout-listview-header {
   margin: 0 20px 20px;
 }
