--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
     <div class="layout-main-inner-wrap">
     
     <aside class="layout-sidebar-wrap">
-        <a href="/events"><h1><img src="/webhost_media/static/gc_logo.png" class="site-logo-img"></h1></a>
+        <!--<a href="/events"><h1><img src="/webhost_media/static/gc_logo.png" class="site-logo-img"></h1></a>!-->
         <div class="sidebar-divider">GATEWAYS</div>
         <h4><a href="/admin">Admin</a></h4>
         <h4><a href="{%url event.views.msg_send %}">Send message</a></h4>
