Fixed friend event list, modified public profile

--- a/templates/accounts/public_profile.html
+++ b/templates/accounts/public_profile.html
@@ -102,9 +102,9 @@
         </h1>
 
         <div class="profile-metadata">
-            &raquo;{{ user.position }}&emsp;
-            &raquo;{{ user.location }}&emsp;
-            &raquo;{{ user.interest }}&emsp;
+            &raquo;&nbsp;{{ user.position }}&emsp;
+            &raquo;&nbsp;{{ user.location }}&emsp;
+            &raquo;&nbsp;{{ user.interest }}&emsp;
             <p class="profile-bio"><strong>Bio:</strong> {{ user.bio }}</p>
         
         </div><!-- .profile-metadata -->
