--- a/media/static/style.css
+++ b/media/static/style.css
@@ -375,14 +375,13 @@ box-shadow:         0px -5px 15px rgba(50, 50, 50, 0.1);
 /* USF EVENT BEGIN */
 /* Main page related */
 .sidebar-divider {
-  border-top: 1px dotted #508373;
-  border-bottom: 1px dotted #508373;
+  border-top: 1px dashed #508373;
+  border-bottom: 1px dashed #508373;
   margin: 10px;
-  text-align: center;
 }
 .layout-sidebar-wrap h4 {
   font-weight: bold;
-  margin: 10px;
+  margin: 5px;
   text-transform: uppercase;
 }
 .page-hero-text {
