--- a/templates/event/event_post.html
+++ b/templates/event/event_post.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div class="layout-content-wrap">
 
 <div class="layout-content-header">
-    <h1 class="page-hero-text">Submit your design</h1>
+    <h1 class="page-hero-text">Submit new event</h1>
 </div>
 
 <form class="form-search" action="" enctype="multipart/form-data" method="post">{% csrf_token %}
@@ -31,9 +32,10 @@ TAGS / CATEGORIES <br>
 <br>
 <div class="page-subhero-text">Submit for authorization</div>
 
-<input type="submit" value="Upload" />
+<input type="submit" value="Submit" />
 </form>
 <br>
 <br>
 
+</div><!-- .layout-content-wrap -->
 {% endblock %}
